maze.lessons.maze.island.IslandMaze.scala.error
Escaper:15: error: too many arguments for method getDirection: ()plm.universe.Direction
    if(getDirection(Direction.NORTH) && !estFaceMur()) 
                   ^Escaper:18: error: value esle is not a member of Unit
possible cause: maybe a semicolon is missing before `value esle'?
    } esle 
      ^Escaper:20: error: too many arguments for method getDirection: ()plm.universe.Direction
      while(!(getDirection(Direction.NORTH) && !estFaceMur())) 
                          ^